--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,10 @@
     "dev": "nodemon api.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@google-cloud/bigquery": "^8.1.1",
     "cors": "^2.8.5",
-    "@google-cloud/bigquery": "^8.1.1"
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
