--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@google-cloud/bigquery": "^6.0.0",
+    "express": "^5.1.0",
     "node-fetch": "^2.7.0"
   },
   "devDependencies": {
